--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 requests = "==2.24.0"
 flask = "==1.1.2"
 python-dotenv = "==0.14.0"
+sqlalchemy = "==1.3.19"
 
 [requires]
 python_version = "3.8"
