--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ requests = "==2.24.0"
 flask = "==1.1.2"
 python-dotenv = "==0.14.0"
 sqlalchemy = "==1.3.19"
+apscheduler = "==3.6.3"
+gunicorn = "==20.0.4"
 
 [requires]
 python_version = "3.8"
