--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,18 +36,22 @@ jobs:
     #     pytest
     -
       name: Set up QEMU
+      if: ${{ github.event_name != 'pull_request'}}
       uses: docker/setup-qemu-action@v1
     -
       name: Set up Docker Buildx
+      if: ${{ github.event_name != 'pull_request'}}
       uses: docker/setup-buildx-action@v1
     -
       name: Login to DockerHub
+      if: ${{ github.event_name != 'pull_request'}}
       uses: docker/login-action@v1 
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     -
       name: Build and push
+      if: ${{ github.event_name != 'pull_request'}}
       id: docker_build
       uses: docker/build-push-action@v2
       with:
@@ -55,4 +59,5 @@ jobs:
         tags: kongeor/pyna:latest
     -
       name: Image digest
+      if: ${{ github.event_name != 'pull_request'}}
       run: echo ${{ steps.docker_build.outputs.digest }}
